feat: 유저 서비스 및 리포지토리 고도화 완료